model folder and services folder added

--- a/src/app/auth/home/home.component.html
+++ b/src/app/auth/home/home.component.html
@@ -3,20 +3,20 @@
         <div class="row">
             <div class="col-md-8">
                 <div class="row" style="height:40px; ">
-                    <img class="logo" src="./assets/img/pharmalogo.jpg" alt=""
+                    <img class="logo" src="./assets/img/pharmalogo1.jpg" alt=""
                     style="height:60px; width:128px;">
                     <h1
                         style="color: red; margin-left: 25px; position: relative;  left:40px; font-style: italic;">
             </h1>
 
                 </div>
-                
+
 
             </div>
             <div class="col-md-4">
                 <!-- <button type="button" [routerLink]="['/home']" style="padding: 5px; width:80px; margin: 10px;"
                     class="btn btn-primary">Home</button> -->
-                    <div class="d-flex justify-content-start"> 
+                    <div class="d-flex justify-content-start">
                 <button type="button" [routerLink]="['About']" style="padding: 5px; width:80px; margin: 10px;"
                     class="btn btn-info">About</button>
                     <div class="space"></div>
