--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -2,14 +2,14 @@
     <div class="container-fluid h-custom">
       <div class="row d-flex justify-content-center align-items-center h-100">
         <div class="col-md-9 col-lg-6 col-xl-5">
-          <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/draw2.webp"
+          <img src="../assets/img/signup.jpg"
             class="img-fluid" alt="Sample image">
         </div>
         <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
           <!-- <form> -->
-           
-            
-  
+
+
+
             <!-- Email input -->
             <div class="dropdown">
               <label for="lang">Login As</label>
@@ -28,20 +28,20 @@
             <div class="form-outline mb-4">
               <label class="form-label" for="form3Example3">Email address</label>
               <input type="email" id="form3Example3" class="form-control form-control-lg"
-                placeholder="Enter a valid email address" 
+                placeholder="Enter a valid email address"
                 [(ngModel)]="loginModel.emailId"/>
-              
+
             </div>
-  
+
             <!-- Password input -->
             <div class="form-outline mb-3">
               <label class="form-label" for="form3Example4">Password</label>
               <input type="password" id="form3Example4" class="form-control form-control-lg"
                 placeholder="Enter password"
                 [(ngModel)]="loginModel.password" />
-              
+
             </div>
-  
+
             <div class="d-flex justify-content-between align-items-center">
               <!-- Checkbox -->
               <div class="form-check mb-0">
@@ -50,16 +50,16 @@
                   Remember me
                 </label>
               </div>
-              
+
             </div>
-  
+
             <div class="text-center text-lg-start mt-4 pt-2">
               <button type="button" class="btn btn-primary btn-lg"
                 style="padding-left: 2.5rem; padding-right: 2.5rem;"
                 (click)="doctorLogin()">Login</button>
-             
+
             </div>
-  
+
           <!-- </form> -->
         </div>
       </div>
@@ -71,7 +71,7 @@
         Copyright © 2022. All rights reserved.
       </div>
       <!-- Copyright -->
-  
+
       <!-- Right -->
       <div>
         <a href="#!" class="text-white me-4">
