--- a/src/app/auth/about/about.component.html
+++ b/src/app/auth/about/about.component.html
@@ -1,47 +1,47 @@
 <div class="start" style="overflow: hidden;">
-    <div class="Container" style="color:whitesmoke; background-color: #0bc1f9; padding: 10px;">
+    <div class="Container" style="color:whitesmoke; background-color:rgb(3 81 79); padding: 10px;">
         <div class="row">
             <div class="col-md-10">
-                <h1 style="color: black; margin-left: 680px;">About</h1>
+                <h1 style="color: #f7f0f0; margin-left: 520px;">About</h1>
             </div>
             <div align="right" class="col-md-2">
-                  <button type="button" [routerLink]="['']" style="padding: 5px; width:80px; margin: 10px;" class="btn btn-secondary">Back</button>  
+                  <button type="button" [routerLink]="['']" style="padding: 5px; width:80px; margin: 10px;" class="btn btn-dark">Back</button>
             </div>
         </div>
     </div>
-    <div class="container" >
-        <div class="bgrim">
+    <div class="container"  >
+        <div class="bgrim" style="background-image: url(../assets/img/about.jpg); height: 600px; background-size:cover;">
             <br>
-           <h2>Who we are, What we do ?</h2>
-            <p>
-                Pharmacy management is developed to ensure the security of information and reliability of pharmacy records when accessing and providing the service to the customers. 
+           <h2 style="padding: 10px">Who we are, What we do ?</h2>
+            <p style="padding: 10px">
+                Pharmacy management is developed to ensure the security of information and reliability of pharmacy records when accessing and providing the service to the customers.
                  The customer and admin have separate login credentials so that only authorized people can only access the website so the data is safe.</p>
 
-            <p>Nowadays, the pharmacy management system is one of the most essential tools that are
-                 mostly used in hospitals. 
-                 It is mostly used to manage pharmacy-related activities such as management of suppliers, 
+            <p style="padding: 10px">Nowadays, the pharmacy management system is one of the most essential tools that are
+                 mostly used in hospitals.
+                 It is mostly used to manage pharmacy-related activities such as management of suppliers,
                  management of drugs stock and sales reports etc...
             </p>
-            <p>Many pharmacies are operating manually they don't have adequate software to manage their activities 
-                So, where the pharmacy website comes into play they can check the stock that is available in the store 
-                and add new items in very less time and can also generate the sales report as well sent 
+            <p style="padding: 10px">Many pharmacies are operating manually they don't have adequate software to manage their activities
+                So, where the pharmacy website comes into play they can check the stock that is available in the store
+                and add new items in very less time and can also generate the sales report as well sent
                 the emails to the respective doctor on placing and confirm the orders.
             </p>
-            <div class="details">
+            <div class="details" style="padding: 10px">
                 <h3>For more information</h3>
                 <br>
                 <h5>Contact:-9438006572</h5>
-                <h5>EmailId:- ansh.pattnaik01@gmail.com</h5>
+                <h5>EmailId:- medicio@gmail.com</h5>
             </div>
         </div>
-       
+
     </div>
-    
-    
-      <!--footer starts from here-->
-      <div class="Container" id="footer"
-      style="color:black; text-align: center;  background-color: #0bc1f9; padding:10px;">
-      <footer><strong>Pharmacy Management System - Contact:- medico012000@pharmacy.in</strong>
-      </footer>
-    </div>
+
+
+
+</div>
+<div class="Container" id="footer"
+style="color:black; text-align: center;  background-color: #03242e; padding:10px;">
+<footer><strong>Pharmacy Management System - Contact:- medico012000@pharmacy.in</strong>
+</footer>
 </div>
