--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,3 +1,4 @@
+<!-- <form #form="ngForm" (submit)="onSubmit(form)">
 <section class="h-100 bg-dark">
     <div class="container py-5 h-100">
       <div class="row d-flex justify-content-center align-items-center h-100">
@@ -12,61 +13,58 @@
               <div class="col-xl-6">
                 <div class="card-body p-md-5 text-black">
                   <h3 class="mb-5 text-uppercase">Doctor registration form</h3>
-  
-                  
+
+                  <input type="hidden"  name="Id" [value]="service.fromData.DoctorId">
+
                     <div class="col-md-12 mb-4">
                       <div class="form-outline">
-                        <label class="form-label" for="form3Example1m">DoctorID</label>
-                        <input type="text" id="form3Example1m" class="form-control form-control-lg" [(ngModel)]="signUp.Id" />
-                        
+                        <label for="name"><b>Name</b></label>
+                        <input type="text" placeholder="Enter Name" name="Name" #Name="ngModel" [(ngModel)]="service.fromData.DocName" required>
+
                       </div>
                     </div>
-                    
-  
-                 
+
+
                     <div class="col-md-12 mb-4">
                       <div class="form-outline">
-                        <label class="form-label" for="form3Example1m1">Name</label>
-                        <input type="text" id="form3Example1m1" class="form-control form-control-lg" [(ngModel)]="signUp.Name" />
-                        
+                        <label for="email"><b>Email</b></label>
+                        <input type="text" placeholder="Enter Email" name="Email" #Email="ngModel" [(ngModel)]="service.fromData.DocEmail" required>
+
                       </div>
                     </div>
-                    
-  
+
+
                   <div class="form-outline mb-4">
-                    <label class="form-label" for="form3Example8">EmailId</label>
-                    <input type="text" id="form3Example8" class="form-control form-control-lg" [(ngModel)]="signUp.EmailId" />
-                    
+                    <label for="PhnNum"><b>PhnNum</b></label>
+                    <input type="text" placeholder="Enter Phone Number" name="PhnNum" #PhnNum="ngModel" [(ngModel)]="service.fromData.DocPhnNum"  required>
+
                   </div>
-  
+
                   <div class="form-outline mb-4">
-                    <label class="form-label" for="form3Example90">PhoneNumber</label>
-                    <input type="text" id="form3Example90" class="form-control form-control-lg" [(ngModel)]="signUp.PhoneNum" />
-                    
+                    <label for="psw"><b>Password</b></label>
+                   <input type="password" placeholder="Enter Password" name="Password" #Password="ngModel"  [(ngModel)]="service.fromData.DocPassword"  required>
+
                   </div>
-   
-  
+
+
                   <div class="form-outline mb-4">
-                    <label class="form-label" for="form3Example9">Address</label>
-                    <input type="text" id="form3Example9" class="form-control form-control-lg" [(ngModel)]="signUp.Address" />
-                    
+                    <label for="address"><b>Address</b></label>
+                    <input type="text" placeholder="Enter Address" name="Address" #Address="ngModel"  [(ngModel)]="service.fromData.DocAddress" required>
+
                   </div>
-  
-                  
-  
-                  
-  
-                  <div class="form-outline mb-4">
-                    <label class="form-label" for="form3Example97">Password</label>
-                    <input type="text" id="form3Example97" class="form-control form-control-lg" [(ngModel)]="signUp.Password"/>
-                    
-                  </div>
-  
+
+
+                  <input type="hidden"  name="Id" [value]="service.fromData.Role">
+
+
+
+
+
                   <div class="d-flex justify-content-end pt-3">
                     <button type="button" class="btn btn-light btn-lg">Reset all</button>
-                    <button type="button" class="btn btn-warning btn-lg ms-2" (click)="submit()">Submit form</button>
+                    <button type="button" class="btn btn-warning btn-lg ms-2">Submit form</button>
                   </div>
-  
+
                 </div>
               </div>
             </div>
@@ -75,3 +73,51 @@
       </div>
     </div>
   </section>
+</form> -->
+<div class="signupFrm">
+<form #form="ngForm" (submit)="onSubmit(form)">
+  <div class="bg-image h-100" style="background-image: url('https://mdbootstrap.com/img/Photos/new-templates/glassmorphism-article/img5.jpg');">
+    <div class="mask d-flex align-items-center h-100">
+  <div class="container">
+    <div class="row justify-content-center">
+      <h1 style="text-align:center">Sign Up</h1>
+      <p style="text-align:center">Please fill in this form to create an account.</p>
+
+
+
+    <input type="hidden"  name="Id" [value]="service.fromData.DoctorId">
+
+    <label for="name"><b>Name</b></label>
+    <input type="text" placeholder="Enter Name" name="Name" #Name="ngModel" [(ngModel)]="service.fromData.DocName" required>
+
+    <label for="email"><b>Email</b></label>
+    <input type="text" placeholder="Enter Email" name="Email" #Email="ngModel" [(ngModel)]="service.fromData.DocEmail" required>
+
+    <label for="PhnNum"><b>PhnNum</b></label>
+    <input type="text" placeholder="Enter Phone Number" name="PhnNum" #PhnNum="ngModel" [(ngModel)]="service.fromData.DocPhnNum"  required>
+
+    <label for="psw"><b>Password</b></label>
+    <input type="password" placeholder="Enter Password" name="Password" #Password="ngModel"  [(ngModel)]="service.fromData.DocPassword"  required>
+
+    <label for="address"><b>Address</b></label>
+    <input type="text" placeholder="Enter Address" name="Address" #Address="ngModel"  [(ngModel)]="service.fromData.DocAddress" required>
+
+    <label>
+      <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
+    </label>
+    <input type="hidden"  name="Id" [value]="service.fromData.Role">
+
+    <p style="width: 60%;">By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
+
+    <div class="d-grid gap-2 d-md-block">
+      <button type="button" class="cancelbtn" style="padding: 10;">Cancel</button>
+      <button type="submit" class="signupbtn"style="padding: 10;">Sign Up</button>
+    </div>
+  </div>
+</div>
+</div>
+</div>
+
+</form>
+</div>
+
