Doctor dashboard pushed

--- a/src/app/auth/home/home.component.html
+++ b/src/app/auth/home/home.component.html
@@ -3,11 +3,15 @@
         <div class="row">
             <div class="col-md-8">
                 <div class="row" style="height:40px; ">
-                    <img class="logo" src="./assets/img/pharmalogo1.jpg" alt=""
-                    style="height:60px; width:128px;">
+                    <img class="logo" src="./assets/img/logo2.png" alt=""
+                    style="height: 60px;
+                    width: 119px;
+                    padding-left: 16px;
+                    padding-bottom: 3px;">
                     <h1
                         style="color: red; margin-left: 25px; position: relative;  left:40px; font-style: italic;">
             </h1>
+
 
                 </div>
 
@@ -17,12 +21,13 @@
                 <!-- <button type="button" [routerLink]="['/home']" style="padding: 5px; width:80px; margin: 10px;"
                     class="btn btn-primary">Home</button> -->
                     <div class="d-flex justify-content-start">
-                <button type="button" [routerLink]="['About']" style="padding: 5px; width:80px; margin: 10px;"
-                    class="btn btn-info">About</button>
+                      <button type="button" [routerLink]="['About']" style="padding: 5px; width:80px; margin: 10px;"
+                      class="btn btn-dark">About</button>
+
                     <div class="space"></div>
-                <button [routerLink]="['Login']" style=" width:80px; margin: 10px;" id="login">Login</button>
+                <button  class="btn btn-success" [routerLink]="['Login']" style=" width:80px; margin: 10px;" id="login">Login</button>
                 <div class="space"></div>
-                <button [routerLink]="['Sign-Up']" style=" width:80px; margin: 10px;"id="signup">SignUp</button>
+                <button  class="btn btn-success" [routerLink]="['Sign-Up']" style=" width:80px; margin: 10px;"id="signup">SignUp</button>
             </div>
             </div>
         </div>
@@ -30,20 +35,35 @@
 
     <div class="bodyimg"
         style="background-image: url(../assets/img/bg_img.webp); height: 550px; background-size:cover; ">
+        <h1 style = "justify-content: end;
+        padding-right: 500px;
+        padding-top: 65px;
+        padding-left: 50px;font-family: verdana;
+  font-size: 300%;">Better Life Needs <br> Better Care</h1>
         <p style = "justify-content: end;
         padding-right: 500px;
-        padding-top: 100px;
+        padding-top: 25px;
         padding-left: 50px;
-        align-items: end; font-size: 20px;">
+        align-items: end; font-size: 19px;
+ ">
 
-            “ In Our System<span></span> we can provide the online Platform to deal with people who are pharmacy management owner or vendor. In this system we can provide web application which is user by doctors or any hospital person so we have make one quotation system for the user and customer also so here we can put our product in our system and customer can buy that product from our system and as well as he/she can order or submit the quotation threw our system. The practice of pharmacy involves the general implementation of medical orders which entails the evaluation and the interpretation of the medical orders, the administration of drugs, dispensation of prescribed drugs from qualified medical practitioners, the review of prescribed drug regimen, and the correct storage of drugs.”
+Medico Pharmacy billing software empowers pharmacists to operate the business with minimal
+staff with the least skills and empower them to grow efficiently with 100% accurate and reliable solution.
+ Medico Pharmacy software simplifies business management by providing digital solutions for every business
+operation like billing, stock auditing, goods inward, stock picking, feedback management, online order taking,
+home delivery management, real-time reporting, and decision making.<span id="points">...</span><span id="moreText"> Medico Pharmacy POS helps with accurate inventory
+management with expiry control and physical stock auditing with 100% drug management. You can make more business by
+partnering with the Doctors and gaining more customers with dedicated commissions. You can get started without any delay
+ as Medico offers a free Pharmacy billing software trial, for you to experience the features and enjoy the benefits.
+</span>
         </p>
+
     </div>
 
 
     <!--footer starts from here-->
     <div class="Container" id="footer"
-        style="color:black; text-align: center;  background-color: #0bc1f9; padding: 10px;">
+        style="color:black; text-align: center;  background-color: #054338; padding: 10px;">
         <footer><strong>Pharmacy Management System - Contact:- medico012000@pharmacy.in</strong>
         </footer>
     </div>
