Admin and medicine dashboard added

--- a/src/app/dashboard/admin-dashboard/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/dashboard/admin-dashboard/admin-dashboard/admin-dashboard.component.html
@@ -1,3 +1,18 @@
-<p>
-  admin-dashboard works!
-</p>
+<div class="bg-img">
+  <div class="container">
+    <div class="topnav">
+      <a [routerLink]="['../../Login']" class="previous">&laquo; Back</a>
+
+      <a [routerLink]="['../medicine']">Medicine</a>
+      <a [routerLink]="['../supplier']">Supplier</a>
+      <a href="#contact">Contact</a>
+      <a href="#supplier">About</a>
+    </div>
+    <div class="bg-text">
+      <h1>Welcome, Admin!</h1>
+      <p>Medico Pharmacy Management Software with Pharmacy Billing
+
+       </p>
+    </div>
+  </div>
+</div>
