--- a/src/app/details/medicine-detail/medicine-detail.component.html
+++ b/src/app/details/medicine-detail/medicine-detail.component.html
@@ -11,7 +11,7 @@
 
                     <h2>{{medicineName}}</h2>
 
-                    <h6>Expiry Date- {{medicineExpDate}}</h6>
+                    <h6>Expiry Date- {{medicineExpDate|date}}</h6>
                     <h6>Stock Available- {{medicineStock}}</h6>
                     <h6>Price- {{medicinePrice}}</h6>
 
