medicine-dashboard update

--- a/src/app/dashboard/admin-dashboard/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/dashboard/admin-dashboard/admin-dashboard/admin-dashboard.component.html
@@ -5,8 +5,8 @@
 
       <a [routerLink]="['../medicine']">Medicine</a>
       <a [routerLink]="['../supplier']">Supplier</a>
-      <a href="#contact">Contact</a>
-      <a href="#supplier">About</a>
+      <a [routerLink]="['../../About']">Contact</a>
+      <a [routerLink]="['../../About']">About</a>
     </div>
     <div class="bg-text">
       <h1>Welcome, Admin!</h1>
