--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -52,13 +52,17 @@
               </div>
 
             </div>
-
+            <div class="d-flex justify-content-start">
             <div class="text-center text-lg-start mt-4 pt-2">
               <button type="button" class="btn btn-primary btn-lg"
                 style="padding-left: 2.5rem; padding-right: 2.5rem;"
                 (click)="doctorLogin()">Login</button>
 
             </div>
+            <div>
+              <button class="btn btn-danger" style="margin-top: 34px;width: 131px;height: 46px;" [routerLink]="['../']">Cancel</button>
+            </div>
+          </div>
 
           <!-- </form> -->
         </div>
