--- a/src/app/dashboard/medicine-dashboard/medicine-form/medicine-form.component.css
+++ b/src/app/dashboard/medicine-dashboard/medicine-form/medicine-form.component.css
@@ -1,5 +1,5 @@
 .formAdd {
-  background:#c7b29e;
+  background:#022213;
   color:#FFF;
   position: absolute;
   top: -250px;
@@ -10,6 +10,7 @@
   transition: top 300ms cubic-bezier(0.17, 0.04, 0.03, 0.94);
   overflow: hidden;
   box-sizing: border-box;
+
   }
   #toggle {
     position:absolute;
