--- a/src/app/details/medicine-detail/medicine-detail.component.html
+++ b/src/app/details/medicine-detail/medicine-detail.component.html
@@ -19,9 +19,9 @@
                     <div class="section" style="padding-bottom:20px;">
                         <h6 class="title-attr"><small>ADD QUANTITY</small></h6>
                         <div>
-                            <div class="btn-minus"><span class="glyphicon glyphicon-minus">-</span></div>
-                            <input value="1" />
-                            <div class="btn-plus"><span class="glyphicon glyphicon-plus">+</span></div>
+                            <div class="btn-minus" (click)="remove()"><span class="glyphicon glyphicon-minus" >-</span></div>
+                            <input [(ngModel)]="num" />
+                            <div class="btn-plus" (click)="add()"><span class="glyphicon glyphicon-plus" >+</span></div>
                         </div>
                     </div>
 
@@ -37,39 +37,4 @@
         </div>
     </body>
 </html>
-<script>
-  $(document).ready(function(){
-            //-- Click on detail
-            $("ul.menu-items > li").on("click",function(){
-                $("ul.menu-items > li").removeClass("active");
-                $(this).addClass("active");
-            })
-
-            $(".attr,.attr2").on("click",function(){
-                var clase = $(this).attr("class");
-
-                $("." + clase).removeClass("active");
-                $(this).addClass("active");
-            })
-
-            //-- Click on QUANTITY
-            $(".btn-minus").on("click",function(){
-                var now = $(".section > div > input").val();
-                if ($.isNumeric(now)){
-                    if (parseInt(now) -1 > 0){ now--;}
-                    $(".section > div > input").val(now);
-                }else{
-                    $(".section > div > input").val("1");
-                }
-            })
-            $(".btn-plus").on("click",function(){
-                var now = $(".section > div > input").val();
-                if ($.isNumeric(now)){
-                    $(".section > div > input").val(parseInt(now)+1);
-                }else{
-                    $(".section > div > input").val("1");
-                }
-            })
-        })
-</script>
 
