Supplier Page added

--- a/src/app/auth/home/home.component.html
+++ b/src/app/auth/home/home.component.html
@@ -23,6 +23,8 @@
                     <div class="d-flex justify-content-start">
                       <button type="button" [routerLink]="['About']" style="padding: 5px; width:80px; margin: 10px;"
                       class="btn btn-dark">About</button>
+                      <button type="button" [routerLink]="['Contact']" style="padding: 5px; width:80px; margin: 10px;"
+                      class="btn btn-dark">Contact Us</button>
 
                     <div class="space"></div>
                 <button  class="btn btn-success" [routerLink]="['Login']" style=" width:80px; margin: 10px;" id="login">Login</button>
