--- a/src/app/dashboard/admin-dashboard/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/dashboard/admin-dashboard/admin-dashboard/admin-dashboard.component.html
@@ -8,7 +8,7 @@
       <a [routerLink]="['../../About']">Contact</a>
       <a [routerLink]="['../../About']">About</a>
     </div>
-    <div class="bg-text">
+    <div class="bg-text" style="margin-left: 351px;height: 147px;">
       <h1>Welcome, Admin!</h1>
       <p>Medico Pharmacy Management Software with Pharmacy Billing
 
