cart page created

--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -110,7 +110,7 @@
     <p style="width: 60%;">By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
 
     <div class="d-grid gap-2 d-md-block">
-      <button type="button" class="cancelbtn" style="padding: 10;">Cancel</button>
+      <button type="button" class="cancelbtn" style="padding: 10;" [routerLink]="['']">Cancel</button>
       <button type="submit" class="signupbtn"style="padding: 10;">Sign Up</button>
     </div>
   </div>
