--- a/src/app/dashboard/admin-dashboard/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/dashboard/admin-dashboard/admin-dashboard/admin-dashboard.component.html
@@ -7,6 +7,11 @@
       <a [routerLink]="['../supplier']">Supplier</a>
       <a [routerLink]="['../../About']">Contact</a>
       <a [routerLink]="['../../About']">About</a>
+
+
+    </div>
+    <div (click)="logout()">
+      <i style="font-size:24px" class="fa">&#xf08b;</i>
     </div>
     <div class="bg-text" style="margin-left: 351px;height: 147px;">
       <h1>Welcome, Admin!</h1>
