--- a/src/app/dashboard/doctor-dashboard/doctor-dashboard/doctor-dashboard.component.html
+++ b/src/app/dashboard/doctor-dashboard/doctor-dashboard/doctor-dashboard.component.html
@@ -23,97 +23,26 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <!-- Navbar brand -->
       <a class="navbar-brand mt-2 mt-lg-0" href="#">
-        <img
-          src="https://mdbcdn.b-cdn.net/img/logo/mdb-transaprent-noshadows.webp"
-          height="15"
-          alt="MDB Logo"
-          loading="lazy"
-        />
+        <img class="logo" src="./assets/img/logo2.png" alt=""
+                    style="height: 50px;
+                    width: 88px;
+                    padding-left: 16px;
+                    padding-bottom: 3px;">
       </a>
-      <!-- Left links -->
-      <!-- <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link" href="#">Dashboard</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Team</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Projects</a>
-        </li>
-      </ul> -->
-      <!-- Left links -->
+
     </div>
     <!-- Collapsible wrapper -->
 
     <!-- Right elements -->
     <div class="d-flex align-items-center">
       <!-- Icon -->
-      <a class="text-reset me-3" href="#">
-        <i class="fas fa-shopping-cart"></i>
+      <a (click)="showCart()"class="text-reset me-3">
+
+        <i  class="fas fa-shopping-cart"></i> {{selectedMedForOrder.length}}
       </a>
+      <i style="font-size:24px" class="fa">&#xf08b;</i>
 
-      <!-- Notifications -->
-      <!-- <div class="dropdown">
-        <a
-          class="text-reset me-3 dropdown-toggle hidden-arrow"
-          href="#"
-          id="navbarDropdownMenuLink"
-          role="button"
-          data-mdb-toggle="dropdown"
-          aria-expanded="false"
-        >
-          <i class="fas fa-bell"></i>
-          <span class="badge rounded-pill badge-notification bg-danger">1</span>
-        </a>
-        <ul
-          class="dropdown-menu dropdown-menu-end"
-          aria-labelledby="navbarDropdownMenuLink"
-        >
-          <li>
-            <a class="dropdown-item" >Some news</a>
-          </li>
-          <li>
-            <a class="dropdown-item" >Another news</a>
-          </li>
-          <li>
-            <a class="dropdown-item" >Something else here</a>
-          </li>
-        </ul>
-      </div> -->
-      <!-- Avatar -->
-      <div class="dropdown">
-        <a
-          class="dropdown-toggle d-flex align-items-center hidden-arrow"
 
-          id="navbarDropdownMenuAvatar"
-          role="button"
-          data-mdb-toggle="dropdown"
-          aria-expanded="false"
-        >
-          <img
-            src="https://mdbcdn.b-cdn.net/img/new/avatars/2.webp"
-            class="rounded-circle"
-            height="25"
-            alt="Black and White Portrait of a Man"
-            loading="lazy"
-          />
-        </a>
-        <ul
-          class="dropdown-menu dropdown-menu-end"
-          aria-labelledby="navbarDropdownMenuAvatar"
-        >
-          <li>
-            <a class="dropdown-item">My profile</a>
-          </li>
-          <li>
-            <a class="dropdown-item">Settings</a>
-          </li>
-          <li>
-            <a class="dropdown-item">Logout</a>
-          </li>
-        </ul>
-      </div>
     </div>
     <!-- Right elements -->
   </div>
@@ -131,7 +60,7 @@
 </div>
 
 <div class="d-flex mr-4" style="margin-top: 130px;">
-  <div class="selector" *ngFor="let medicine of(medicineList | filter:search:'medName')"
+  <div class="selector" *ngFor="let medicine of(medicineList | filter:search:'medName');let i=index"
 
  >
 
@@ -152,14 +81,25 @@
       </span>
       <div>
         <p>₹{{ medicine.medPrice }}</p>
-
+      <div *ngIf="!medicine.isSelected">
         <button
           class="btn btn-success"
           style="margin-left: 50px; background-color: #1e4f38; margin-top: 8px"
-          type="button"
-        >
+          type="button" (click)="addToCart(medicine)">
+
           Add to cart
         </button>
+      </div>
+      <div *ngIf="medicine.isSelected">
+        <button
+          class="btn btn-danger"
+          style="margin-left: 50px; margin-top: 8px"
+          type="button" (click)="remove(medicine,i)">
+
+          Remove
+        </button>
+
+      </div>
 
       </div>
     </label>
