--- a/src/app/details/medicine-detail/medicine-detail.component.html
+++ b/src/app/details/medicine-detail/medicine-detail.component.html
@@ -3,6 +3,8 @@
 <html>
     <body>
         <div class="container">
+          <a style="font-size: 20px;
+          font-weight: 500;color:black" [routerLink]="['../../dashboard/doctor']" class="previous">&laquo; Back</a>
         	<div class="row">
                <div class="col-xs-4 item-photo">
                     <img style="max-width:50%;" src={{medicineImg}} />
