--- a/src/app/dashboard/medicine-dashboard/medicine-form/medicine-form.component.html
+++ b/src/app/dashboard/medicine-dashboard/medicine-form/medicine-form.component.html
@@ -12,23 +12,23 @@
 
                     <label for="medname" class="float-left">Name</label>
                     <div *ngIf="medname.invalid && (medname.touched || medname.dirty)" class="float-right">
-                        <p class="text-danger">Required</p>
+                        <p class="text-danger">This field is Required</p>
                     </div>
                     <input type="text" name="medname" class="form-control" placeholder="Enter Name" #medname="ngModel" [(ngModel)]="medicineService.medicineData.medName" required>
                 </div>
 
                 <div class="col-md-3">
                     <label for="stock" class="float-left">Stock</label>
-                    <div *ngIf="medstock.invalid && (medstock.touched || medstock.dirty)" class="float-right">
-                        <p class="text-danger">Required</p>
+                    <div *ngIf="medstock.invalid && (medstock.touched || medstock.dirty) " class="float-right">
+                        <p class="text-danger">This field is Required</p>
                     </div>
-                    <input type="text" name="medstock" class="form-control" placeholder="Enter Stock" #medstock="ngModel" [(ngModel)]="medicineService.medicineData.medStock" >
+                    <input type="text" name="medstock" class="form-control" placeholder="Enter Stock" #medstock="ngModel" [(ngModel)]="medicineService.medicineData.medStock"  >
                 </div>
 
                 <div class="col-md-3">
                     <label for="medprice" class="float-left">Price</label>
                     <div *ngIf="medprice.invalid && (medprice.touched || medprice.dirty)" class="float-right">
-                        <p class="text-danger">Required</p>
+                        <p class="text-danger">This field is Required</p>
                     </div>
                     <input type="text" name="medprice" class="form-control" placeholder="Enter Medicine Price" #medprice="ngModel" [(ngModel)]="medicineService.medicineData.medPrice" required>
                 </div>
@@ -46,16 +46,16 @@
                 <div class="col-md-3">
                     <label for="medexpdate" class="label float-left">Expiry Date</label>
                     <div *ngIf="medexpdate.invalid && (medexpdate.touched || medexpdate.dirty)" class="float-right">
-                        <p class="text-danger">Required</p>
+                        <p class="text-danger">This field is Required</p>
                     </div>
-                    <input type="text" class="form-control" name="medexpdate" [(ngModel)]="medicineService.medicineData.medExpDate" #medexpdate="ngModel" required>
+                    <input type="text" datetime="yyyy-MM-dd" class="form-control" name="medexpdate" [(ngModel)]="medicineService.medicineData.medExpDate" placeholder="Enter expiry date" #medexpdate="ngModel" required>
                 </div>
                 <div class="col-md-3">
                   <label for="medimage" class="float-left">Image</label>
                   <div *ngIf="medimage.invalid && (medimage.touched || medimage.dirty)" class="float-right">
-                      <p class="text-danger">Required</p>
+                      <p class="text-danger">This field is Required</p>
                   </div>
-                  <input type="text" name="medimage" class="form-control" placeholder="Enter Image URL" #medimage="ngModel" [(ngModel)]="medicineService.medicineData.medImage" >
+                  <input type="text"  name="medimage" class="form-control" placeholder="Enter Image URL" #medimage="ngModel" [(ngModel)]="medicineService.medicineData.medImage" >
               </div>
 
 
@@ -67,7 +67,7 @@
                   width: 79px;">Save</button>
               </div>
               <div class="col-md-2">
-                  <button type="reset" class="btn btn-danger btn-block">Cancel</button>
+                  <button type="reset" class="btn btn-danger btn-block" (click)="cancel()">Cancel</button>
               </div>
           </div>
 
