sale report completd

--- a/src/app/dashboard/admin-dashboard/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/dashboard/admin-dashboard/admin-dashboard/admin-dashboard.component.html
@@ -6,7 +6,7 @@
       <a [routerLink]="['../medicine']">Medicine</a>
       <a [routerLink]="['../supplier']">Supplier</a>
       <a [routerLink]="['../../About']">Contact</a>
-      <a [routerLink]="['../../About']">About</a>
+      <a [routerLink]="['../sales']">Sales Report</a>
 
 
     </div>
