--- a/src/app/dashboard/doctor-dashboard/doctor-dashboard/doctor-dashboard.component.html
+++ b/src/app/dashboard/doctor-dashboard/doctor-dashboard/doctor-dashboard.component.html
@@ -36,11 +36,11 @@
     <!-- Right elements -->
     <div class="d-flex align-items-center">
       <!-- Icon -->
-      <a (click)="showCart()"class="text-reset me-3">
+      <a (click)="showCart()"class="text-reset me-3" style="height: 25px">
 
         <i  class="fas fa-shopping-cart"></i> {{selectedMedForOrder.length}}
       </a>
-      <i style="font-size:24px" class="fa">&#xf08b;</i>
+      <i style="font-size:24px;font-weight: 200;" class="fa">&#xf08b;</i>
 
 
     </div>
