--- a/src/app/dashboard/cart/cart.component.html
+++ b/src/app/dashboard/cart/cart.component.html
@@ -1,4 +1,4 @@
-{{ selectedMed | json }}
+{{selectedMed | json}}
 <section class="h-100 h-custom" style="background-color: #d2c9ff">
   <div class="container py-5 h-100">
     <div class="row d-flex justify-content-center align-items-center h-100">
@@ -11,6 +11,7 @@
             <div class="row g-0">
               <div class="col-lg-8">
                 <div class="p-5">
+                  <a  [routerLink]="['../doctor']" class="previous">&laquo; Back</a>
                   <div
                     class="d-flex justify-content-between align-items-center mb-5"
                   >
@@ -83,39 +84,28 @@
                   <div class="mb-4 pb-2">
                     <select class="select">
                       <option value="1">Standard-Delivery- ₹100</option>
-                      <option value="2">Two</option>
+                      <!-- <option value="2">Two</option>
                       <option value="3">Three</option>
-                      <option value="4">Four</option>
+                      <option value="4">Four</option> -->
                     </select>
                   </div>
 
-                  <h5 class="text-uppercase mb-3">Give code</h5>
 
-                  <div class="mb-5">
-                    <div class="form-outline">
-                      <input
-                        type="text"
-                        id="form3Examplea2"
-                        class="form-control form-control-lg"
-                      />
-                      <label class="form-label" for="form3Examplea2"
-                        >Enter your code</label
-                      >
-                    </div>
-                  </div>
 
                   <hr class="my-4" />
 
                   <div class="d-flex justify-content-between mb-5">
                     <h5 class="text-uppercase">Total price</h5>
-                    <h5>₹{{totalAmount}}</h5>
+                    <h5 *ngIf="selectedMed.length>0">₹{{totalAmount+100}}</h5>
+                    <h5 *ngIf="selectedMed.length==0">₹0</h5>
                   </div>
 
                   <button
                     type="button"
                     class="btn btn-dark btn-block btn-lg"
                     data-mdb-ripple-color="dark"
-                  >
+                    (click)="placeOrder()">
+
                     Place Order
                   </button>
                 </div>
