order sales report completed

--- a/src/app/auth/home/home.component.html
+++ b/src/app/auth/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="start" style=" overflow: hidden;">
-    <div class="Container" style="color:whitesmoke;  background-color:rgb(3 81 79); padding: 10px;">
+    <div class="Container" style="color:whitesmoke; height: 74px;  background-color:rgb(3 81 79); padding: 10px;">
         <div class="row">
             <div class="col-md-8">
                 <div class="row" style="height:40px; ">
@@ -21,15 +21,15 @@
                 <!-- <button type="button" [routerLink]="['/home']" style="padding: 5px; width:80px; margin: 10px;"
                     class="btn btn-primary">Home</button> -->
                     <div class="d-flex justify-content-start">
-                      <button type="button" [routerLink]="['About']" style="padding: 5px; width:80px; margin: 10px;"
+                      <button type="button" [routerLink]="['About']" style="padding: 5px; width:99px; height: 43px; margin: 10px;"
                       class="btn btn-dark">About</button>
-                      <button type="button" [routerLink]="['Contact']" style="padding: 5px; width:80px; margin: 10px;"
+                      <button type="button" [routerLink]="['Contact']" style="padding: 5px; width:121px; height: 43px; margin: 10px;"
                       class="btn btn-dark">Contact Us</button>
 
                     <div class="space"></div>
-                <button  class="btn btn-success" [routerLink]="['Login']" style=" width:80px; margin: 10px;" id="login">Login</button>
+                <button  class="btn btn-success" [routerLink]="['Login']" style=" width:99px; height: 43px; margin: 10px;" id="login">Login</button>
                 <div class="space"></div>
-                <button  class="btn btn-success" [routerLink]="['Sign-Up']" style=" width:80px; margin: 10px;"id="signup">SignUp</button>
+                <button  class="btn btn-success" [routerLink]="['Sign-Up']" style=" width:99px; height: 43px; margin: 10px;"id="signup">SignUp</button>
             </div>
             </div>
         </div>
