--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -2,8 +2,10 @@
     <div class="container-fluid h-custom">
       <div class="row d-flex justify-content-center align-items-center h-100">
         <div class="col-md-9 col-lg-6 col-xl-5">
-          <img src="../assets/img/signup.jpg"
-            class="img-fluid" alt="Sample image">
+          <img src="../assets/img/signup.jpg" style="height: 419px;
+          width: 747px;
+          margin-left: -116px;"
+            class="img" alt="Sample image">
         </div>
         <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
           <!-- <form> -->
@@ -60,7 +62,11 @@
 
             </div>
             <div>
-              <button class="btn btn-danger" style="margin-top: 34px;width: 131px;height: 46px;" [routerLink]="['../']">Cancel</button>
+              <button class="btn btn-danger" style="margin-top: 32px;
+              width: 131px;
+              height: 48px;
+              margin-left: 13px;
+          " [routerLink]="['../']">Cancel</button>
             </div>
           </div>
 
@@ -69,7 +75,7 @@
       </div>
     </div>
     <div
-      class="d-flex flex-column flex-md-row text-center text-md-start justify-content-between py-4 px-4 px-xl-5 bg-primary">
+      class="d-flex flex-column flex-md-row text-center text-md-start justify-content-between py-4 px-4 px-xl-5 bg-dark">
       <!-- Copyright -->
       <div class="text-white mb-3 mb-md-0">
         Copyright © 2022. All rights reserved.
