--- a/src/app/dashboard/admin-dashboard/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/dashboard/admin-dashboard/admin-dashboard/admin-dashboard.component.html
@@ -5,13 +5,13 @@
 
       <a [routerLink]="['../medicine']">Medicine</a>
       <a [routerLink]="['../supplier']">Supplier</a>
-      <a [routerLink]="['../../About']">Contact</a>
+      <a [routerLink]="['../order']">Order</a>
       <a [routerLink]="['../sales']">Sales Report</a>
 
 
     </div>
     <div (click)="logout()">
-      <i style="font-size:24px" class="fa">&#xf08b;</i>
+      <i style="font-size:24px;margin-right: -27px;margin-top: 16px" class="fa">&#xf08b;</i>
     </div>
     <div class="bg-text" style="margin-left: 351px;height: 147px;">
       <h1>Welcome, Admin!</h1>
