--- a/src/app/dashboard/doctor-dashboard/doctor-dashboard/doctor-dashboard.component.html
+++ b/src/app/dashboard/doctor-dashboard/doctor-dashboard/doctor-dashboard.component.html
@@ -40,8 +40,9 @@
 
         <i  class="fas fa-shopping-cart"></i> {{selectedMedForOrder.length}}
       </a>
+      <div (click)="logout()">
       <i style="font-size:24px;font-weight: 200;" class="fa">&#xf08b;</i>
-
+    </div>
 
     </div>
     <!-- Right elements -->
