--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -109,11 +109,11 @@
 
     <p style="width: 60%;">By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
 
-    <div class="d-grid gap-2 d-md-block">
-      <button type="button" class="cancelbtn" style="margin-left: 438px;
-      width: 275px;" [routerLink]="['']">Cancel</button>
-      <button type="submit" class="signupbtn"style="margin-left: 438px;
-      width: 275px;">Sign Up</button>
+    <div class="d-flex justify-content-center">
+      <button type="button" class="cancelbtn"
+      [routerLink]="['']">Cancel</button>
+      <button type="submit" class="signupbtn"
+      >Sign Up</button>
     </div>
   </div>
 </div>
