--- a/src/app/auth/about/about.component.css
+++ b/src/app/auth/about/about.component.css
@@ -42,8 +42,9 @@
   color: black;
 }
 .bg-text {
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
+  background-color: rgb(250, 249, 249); /* Fallback color */
+  background-color: rgba(249, 243, 243, 0.4);
+   /* Black w/opacity/see-through */
   color: white;
   font-weight: bold;
   border: 3px solid #f1f1f1;
