--- a/src/app/auth/about/about.component.html
+++ b/src/app/auth/about/about.component.html
@@ -57,13 +57,13 @@ style="color:black; text-align: center;  background-color: #03242e; padding:10px
     <div class="bg-text" style="width: 898px;
     height: 423px;
     margin-left: 518px">
-      <h3>What is Pharmacy software?</h3>
-      <p>Pharmacy software is an online software designed to manage all the retail pharmacy activities like medicine expiry management, pharmacy billing, inventory management, and accounting.
+      <h3 style="color: #000066;">What is Pharmacy software?</h3>
+      <p style="text-align: justify;color:black; font-style: italic;">Pharmacy software is an online software designed to manage all the retail pharmacy activities like medicine expiry management, pharmacy billing, inventory management, and accounting.
       </p>
-      <h3>Why do Pharmacies need Pharmacy billing software?
+      <h3 style="color: #000066;">Why do Pharmacies need Pharmacy billing software?
 
         </h3>
-        <p>Medico Pharmacy billing software empowers pharmacists to operate the business with minimal staff with the least skills and empower them to grow efficiently with 100% accurate and reliable solution. Gofrugal Pharmacy software simplifies business management by providing digital solutions for every business operation like billing, stock auditing, goods inward, stock picking, feedback management, online order taking, home delivery management, real-time reporting, and decision making. Gofrugal Pharmacy POS helps with accurate inventory management with expiry control and physical stock auditing with 100% drug management. You can make more business by partnering with the Doctors and gaining more customers with dedicated commissions
+        <p style="text-align: justify;color:black;font-style: italic;">Medico Pharmacy billing software empowers pharmacists to operate the business with minimal staff with the least skills and empower them to grow efficiently with 100% accurate and reliable solution. Gofrugal Pharmacy software simplifies business management by providing digital solutions for every business operation like billing, stock auditing, goods inward, stock picking, feedback management, online order taking, home delivery management, real-time reporting, and decision making. Gofrugal Pharmacy POS helps with accurate inventory management with expiry control and physical stock auditing with 100% drug management. You can make more business by partnering with the Doctors and gaining more customers with dedicated commissions
 
         </p>
 
