--- a/src/app/auth/home/home.component.html
+++ b/src/app/auth/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="start" style=" overflow: hidden;">
-    <div class="Container" style="color:whitesmoke; height: 74px;  background-color:rgb(3 81 79); padding: 10px;">
+    <div class="Container" style="color:whitesmoke; height: 74px;  background-color:#3f51b5; padding: 10px;">
         <div class="row">
             <div class="col-md-8">
                 <div class="row" style="height:40px; ">
@@ -47,6 +47,7 @@
         padding-top: 25px;
         padding-left: 50px;
         align-items: end; font-size: 19px;
+        text-align: justify;
  ">
 
 Medico Pharmacy billing software empowers pharmacists to operate the business with minimal
@@ -65,7 +66,7 @@ partnering with the Doctors and gaining more customers with dedicated commission
 
     <!--footer starts from here-->
     <div class="Container" id="footer"
-        style="color:black; text-align: center;  background-color: #054338; padding: 10px;">
+        style="color:rgb(248, 247, 247); text-align: center;  background-color: #3f51b5; padding: 10px;">
         <footer><strong>Pharmacy Management System - Contact:- medico012000@pharmacy.in</strong>
         </footer>
     </div>
