--- a/src/app/dashboard/medicine-dashboard/medicine-dashboard.component.html
+++ b/src/app/dashboard/medicine-dashboard/medicine-dashboard.component.html
@@ -1,6 +1,8 @@
+
 <div class="container">
   <app-medicine-form></app-medicine-form>
 </div>
+<div class="bg-img">
 <table class="table table-hover" style="margin-left: 109px">
   <thead class="thead-dark">
     <tr>
@@ -28,3 +30,4 @@
 
   </tbody>
 </table>
+</div>
