--- a/src/app/dashboard/supplier-dashboard/supplier-dashboard.component.html
+++ b/src/app/dashboard/supplier-dashboard/supplier-dashboard.component.html
@@ -1,5 +1,6 @@
 <!-- {{supplierList | json}} -->
 <app-supplier-form [supplier]="supplierData" ></app-supplier-form>
+<div class="bg-img">
 <table class="table table-hover" style="margin-left: 50px">
     <thead class="thead-dark">
       <tr>
@@ -30,3 +31,4 @@
 
     </tbody>
   </table>
+</div>
