--- a/src/app/dashboard/sales-report/sales-report.component.css
+++ b/src/app/dashboard/sales-report/sales-report.component.css
@@ -1,12 +1,12 @@
 div#addEstDetails {
 	padding: 0 30px;
 }
-table {
+/* table {
 	border-spacing: 0;
 	width: 100%;
 	border: 1px solid #ddd;
   margin-left: 40px;
-}
+} */
 /* .btn {
   background-color: DodgerBlue;
   border: none;
@@ -20,8 +20,24 @@ table {
 .btn:hover {
   background-color: RoyalBlue;
 }
-tr {
+/* tr {
   border-bottom: 1px solid #ddd;
   margin: 10px;
   background-color:#D6EEEE;
+} */
+tbody tr:nth-child(odd) {
+  background: #202932;
+}
+
+tbody tr:nth-child(even) {
+  background: #2c3844;
+}
+
+.table-active {
+  color: #ffffff;
+}
+th, td {
+  padding: 10px;
+  border: 1px solid #777;
+  text-align: center;
 }
