--- a/src/app/dashboard/doctor-dashboard/doctor-dashboard/doctor-dashboard.component.html
+++ b/src/app/dashboard/doctor-dashboard/doctor-dashboard/doctor-dashboard.component.html
@@ -3,7 +3,7 @@
 
 </div> -->
 <!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light " style=" background-color:#bdd6d2;position: static;top:0px">
   <!-- Container wrapper -->
   <div class="container-fluid">
     <!-- Toggle button -->
@@ -61,7 +61,7 @@
 </div>
 
 <div class="d-flex mr-4" style="margin-top: 130px;">
-  <div class="selector" *ngFor="let medicine of(medicineList | filter:search:'medName');let i=index"
+  <div style="margin-top: -50px;" class="selector" *ngFor="let medicine of(medicineList | filter:search:'medName');let i=index"
 
  >
 
