--- a/src/app/dashboard/order-dashboard/order-dashboard.component.html
+++ b/src/app/dashboard/order-dashboard/order-dashboard.component.html
@@ -42,14 +42,14 @@
 
 <table
   *ngIf="selectedTabIndex == 0"
-  class="table table-hover table-responsive-lg m-auto w-100 table sortable dataTable dataTable_length sorting"
+  class="table table-responsive-lg m-auto w-100 table sortable dataTable dataTable_length sorting"
   id="est_table"
 >
   <thead class="thead-dark">
     <tr>
       <th>order Id</th>
       <th>order Date</th>
-      <th>Medicine Id</th>
+      <!-- <th>Medicine Id</th> -->
       <th>Items</th>
       <th>Total amount</th>
       <th>Confirm Order</th>
@@ -59,7 +59,7 @@
     <tr class="table-active" *ngFor="let list of orderList">
       <td>{{ list.orderId }}</td>
       <td>{{ list.orderDate | date: "yyyy-MM-dd" }}</td>
-      <td>{{ list.medicineId }}</td>
+      <!-- <td>{{ list.medicineId }}</td> -->
       <td>{{ list.count }}</td>
       <td>{{ list.amount }}</td>
       <td *ngIf="!list.isConfirmed && !list.isPickedUp">
@@ -81,13 +81,13 @@
   </tbody>
 </table>
 <div *ngIf="selectedTabIndex == 1">
-  <table  class="table table-hover table-responsive-lg m-auto w-100 table sortable dataTable dataTable_length sorting"
+  <table  class="table table-responsive-lg m-auto w-100 table sortable dataTable dataTable_length sorting"
   id="est_table">
     <thead class="thead-dark">
       <tr>
         <th>order Id</th>
         <th>order Date</th>
-        <th>Medicine Id</th>
+        <!-- <th>Medicine Id</th> -->
         <th>Items</th>
         <th>Total amount</th>
       </tr>
@@ -96,7 +96,7 @@
       <tr class="table-active" *ngFor="let list of confirmedList">
         <td>{{ list.orderId }}</td>
         <td>{{ list.orderDate | date: "yyyy-MM-dd" }}</td>
-        <td>{{ list.medicineId }}</td>
+        <!-- <td>{{ list.medicineId }}</td> -->
         <td>{{ list.count }}</td>
         <td>{{ list.amount }}</td>
       </tr>
